Fix: Fix responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ h1 {
 }
 
 
-@media (max-width: 568px) and (min-width: 100px) {
+@media (max-width: 568px){
    h1 {
     margin-top: 0;
     font-size: 1rem;
